# mineclaude

./: .gitignore  Cargo.toml  README.md  SPEC.md  build.rs
.claude/: CLAUDE.md  WORKFLOW.md
assets/shaders/: atlas_tile.wgsl
research/: architecture.md  assets.md  bevy_engine.md  cave_generation.md  minecraft_mechanics.md
src/: main.rs
src/audio/: mod.rs
src/block/: atlas.rs  mod.rs
src/entity/: dropped_item.rs  mob.rs  mod.rs
src/inventory/: chest.rs  crafting.rs  furnace.rs  inventory.rs  item.rs  mod.rs
src/lighting/: day_night.rs  mod.rs  sky.rs
src/player/: controller.rs  interaction.rs  mod.rs  physics.rs
src/save/: mod.rs  persistence.rs
src/ui/: chest_screen.rs  common.rs  crafting_table_screen.rs  death_screen.rs  debug_map.rs  furnace_screen.rs  hotbar.rs  hud.rs  inventory_screen.rs  main_menu.rs  mod.rs  pause_menu.rs
src/world/: chunk.rs  coordinates.rs  generation.rs  manager.rs  material.rs  meshing.rs  mod.rs
