[package]
name = "mineclaude"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["free_camera"] }
noise = "0.9"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
flate2 = "1"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
